# ergodox-live-training-driver

./: Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: coverage.yml
GraphQL/: layout_query.graphql  oryx_schema.json
ergodox_driver/: all.html  index.html  sidebar-items.js
ergodox_driver/driver/: constant.ERGODOX_IDS.html  constant.EVT_KEYDOWN.html  constant.EVT_KEYUP.html  constant.EVT_LAYER.html  constant.EVT_LAYOUT_NAME.html  constant.EVT_LAYOUT_NAME_LEGACY.html  constant.EVT_LIVE_TRAINING.html  constant.EVT_PAIRED.html  constant.MOONLANDER_IDS.html  constant.PLANCK_IDS.html  constant.SEPARATOR.html  constant.STATUS_SUCCESS.html  constant.VENDOR_IDS.html  enum.Command.html  enum.DriverError.html  enum.Event.html  enum.KeyboardType.html  fn.connect_to_first.html  fn.decode_packet.html  fn.open_device.html  fn.select_interface.html  index.html  sidebar-items.js  struct.DeviceConfiguration.html  struct.ErgodoxDriver.html  struct.KeyCode.html  struct.LayoutId.html
ergodox_driver/layout_store_client/: constant.ORYX_KEY.html  enum.KeyboardType.html  enum.QueryError.html  fn.query_layout.html  index.html  sidebar-items.js  struct.ERGODOX_MAP.html  struct.Key.html  struct.Layer.html  (+3 more)
ergodox_live_training_driver/: all.html  fn.main.html  index.html  sidebar-items.js
open_ergodox_layout/: all.html  fn.main.html  index.html  struct.Args.html
open_layout/: all.html  fn.main.html  index.html  struct.Args.html
src/: driver.rs  layout_store_client.rs  lib.rs  main.rs
training/: all.html  fn.main.html  index.html
(+101 files in other folders)
