[package]
name = "ergodox-live-training-driver"
version = "0.1.0"
authors = ["David Weis <dweis7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.6"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
simplelog = "0.8"
