[package]
name = "ergodox-driver"
version = "0.1.0"
authors = ["David Weis <dweis7@gmail.com>"]
edition = "2018"
include = ["GraphQL/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.8"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
simplelog = "0.10"
graphql_client = "0.9"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
